Prevent overflowing code block
This commit makes the code block has horizontal scrollbar instead of
wrapping the code.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ pre {
   border: 0.3rem solid;
   padding: 1rem;
   border-radius: 0.3rem;
-  white-space: pre-wrap;
+  overflow-x: auto;
 }
 
 pre code {
